fix: removed cctv-wall flex to fix layout overlap

--- a/Ringmaster/public/index.html
+++ b/Ringmaster/public/index.html
@@ -84,12 +84,11 @@
         }
 
         .cctv-wall {
-            flex: 1;
-            padding: 30px;
+            flex: none;
+            padding: 10px 30px;
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
             gap: 25px;
-            overflow-y: auto;
             align-content: start;
             position: relative;
             z-index: 5;
