fix: explicit flex-shrink: 0 to prevent dashboard modules collapsing over each other

--- a/Ringmaster/public/index.html
+++ b/Ringmaster/public/index.html
@@ -473,6 +473,10 @@
             gap: 20px;
         }
 
+        .dashboard-scroll>* {
+            flex-shrink: 0;
+        }
+
         .dashboard-scroll::-webkit-scrollbar {
             width: 8px;
         }
